fixed overflow

--- a/client/src/components/Chats/Chats.css
+++ b/client/src/components/Chats/Chats.css
@@ -90,6 +90,6 @@
         padding: 3rem 2rem;
     }
     .chat-box::-webkit-scrollbar {
-        width: 15px;
+        width: 12px;
     }
 }
