--- a/client/src/components/SideBar/SideBar.css
+++ b/client/src/components/SideBar/SideBar.css
@@ -16,6 +16,30 @@
     transform: translateX(0);
 }
 
+.side-container {
+    height: 100%;
+    overflow-y: auto;
+    padding-bottom: 2rem;
+}
+
+.side-container::-webkit-scrollbar {
+    width: 5px;
+}
+  
+.side-container::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #E0E0E0; 
+    border-radius: 10px;
+}
+
+.side-container::-webkit-scrollbar-thumb {
+    background: #828282; 
+    border-radius: 10px;
+}
+  
+.side-container::-webkit-scrollbar-thumb:hover {
+    background: #2D9CDB; 
+}
+
 @media (min-width: 768px) {
     .sidebar {
         display: initial;
